--- a/tasks/database.yml
+++ b/tasks/database.yml
@@ -1,6 +1,6 @@
 ---
 - name: create database authentication secret
-  community.kubernetes.k8s:
+  kubernetes.core.k8s:
     definition:
       kind: Secret
       apiVersion: v1
@@ -12,7 +12,7 @@
         username: "{{ db_user }}"
         password: "{{ db_pass }}"
 - name: deploy mysql
-  community.kubernetes.k8s:
+  kubernetes.core.k8s:
     definition:
       kind: Deployment
       apiVersion: apps/v1
@@ -54,7 +54,7 @@
                       name: "{{ app_name + '-mysql-auth' }}"
                       key: password
 - name: create mysql service
-  community.kubernetes.k8s:
+  kubernetes.core.k8s:
     definition:
       kind: Service
       metadata:
